--- a/api_keys_usage.json.example
+++ b/api_keys_usage.json.example
@@ -5,6 +5,7 @@
     "reqs": 0,
     "code_reqs": 0,
     "created_at": "2024-02-04 12:00:00",
-    "last_used": null
+    "last_used": null,
+    "phone": "139xxxxxxxx"
   }
 }
